форма обратной связи(попытка №....)

--- a/index.html
+++ b/index.html
@@ -110,212 +110,6 @@
 		<img src="/img/001-upwards-arrow.svg" alt="">
 	</a>
 
-
-
-	<div class="gal">
-		<div class="container-fluid">
-
-			<section class="row align-items-stretch photos" id="section-photos">
-				<div class="col-12">
-					<div class="row align-items-stretch">
-
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up">
-							<a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_4.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-							<a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_5.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-							<a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_1.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up">
-							<a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_2.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-							<a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_3.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-							<a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_6.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up">
-							<a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_7.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-							<a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_8.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-							<a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_9.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-
-
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
-							<a href="images/img_10.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_10.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
-							<a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_1.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="200">
-							<a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_2.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
-							<a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_3.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
-							<a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_4.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="200">
-							<a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_5.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
-							<a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_6.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
-							<a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_7.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="200">
-							<a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_8.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
-							<a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_9.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
-							<a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_4.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="200">
-							<a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-								<img src="images/img_5.jpg" alt="Image" class="img-fluid">
-								<div class="photo-text-more">
-									<span class="icon icon-search"></span>
-								</div>
-							</a>
-						</div>
-
-
-
-					</div>
-
-				</div>
-			</section> <!-- #section-photos -->
-
-		</div>
-	</div>
-
-
-
-
-
-
-
-
-
-
-
-
 	<div class="galer" id="galer">
 		<div class="album py-5 galerColor">
 
@@ -470,14 +264,21 @@
 					</div>
 					<div class="row">
 
-						<form action="http://mihailmaximov.ru/projects/mail/post.php" method="post" name="form">
-							<!-- Поле ввода имени --> <input name="name" type="text" placeholder="Ваше имя" /> <br>
-							<!-- Поле ввода почты --> <input name="email" type="text" placeholder="Ваша почта" /> <br>
-							<!-- Поле ввода для темы сообщения --> <input size="30" name="header" type="text"
-								placeholder="Тема" /> <br> <!-- Текстовое поле для самого сообщения --> <textarea cols="32"
-								name="message" rows="5"> Текст сообщения </textarea> <br>
-							<!-- Кнопка с надписью «Отправить», которая запускает обработчик формы --> <input type="submit"
-								value="Отправить" />
+						<form name="form" action="mail.php" method="post" id="form_message">
+							<h2>Форма обратной связи.</h2>
+							<p>
+							<div class="titles">Ваше имя*</div> <input class="input" name="name" type="text" /> </p>
+
+							<p>
+							<div class="titles">Электронная почта*</div> <input class="input" name="email" type="text" /> </p>
+
+							<p>
+							<div class="titles">Тема сообщения</div> <input class="input" name="subjects" type="text" /> </p>
+
+							<p>
+							<div class="titles">Текст сообщения:</div><textarea name="message" cols="22" rows="5" /></textarea>
+							</p>
+							<p><input id="submit" value="Отправить" type="submit" /></p>
 						</form>
 
 					</div>
