--- a/index.html
+++ b/index.html
@@ -107,8 +107,38 @@
 	</header>
 
 	<a class="btn" id="top">
-		<img src="/img/001-upwards-arrow.svg" alt="">
+		<img class="top" src="/img/001-upwards-arrow.svg" alt="">
 	</a>
+
+
+	<div class="galer">
+		<div class="galerWrapper">
+
+			<img src="/img/001-upwards-arrow.svg" alt="" class="imgGall">
+
+			<img src="/img/IMG-20201021-WA0004.jpg" alt="" class="imgGall">
+
+			<img src="/img/IMG-20201021-WA0016.jpg" alt="" class="imgGall">
+
+			<img src="/img/IMG-20201021-WA0004.jpg" alt="" class="imgGall">
+
+			<img src="/img/001-upwards-arrow.svg" alt="" class="imgGall">
+
+			<img src="/img/IMG-20201021-WA0016.jpg" alt="" class="imgGall">
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 	<div class="galer" id="galer">
 		<div class="album py-5 galerColor">
@@ -278,113 +308,116 @@
 							<p><input id="submit" value="Отправить" type="submit" /></p>
 						</form>
 					</div>
-
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<div class="customer customerColor">
+	<div class="customer customerColor">
 
-			<div class="container ">
-
-
-				<div class="row">
-
-					<div class="col-lg-4">
-
-						<div class="customerAva">
-							<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
-						</div>
-
-						<h2>Heading</h2>
-						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh
-							ultricies
-							vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-							cursus magna.</p>
-
-					</div><!-- /.col-lg-4 -->
-
-					<div class="col-lg-4">
-
-						<div class="customerAva">
-							<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
-						</div>
-
-						<h2>Heading</h2>
-						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh
-							ultricies
-							vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-							cursus magna.</p>
-
-					</div><!-- /.col-lg-4 -->
-
-					<div class="col-lg-4">
-
-						<div class="customerAva">
-							<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
-						</div>
-
-						<h2>Heading</h2>
-						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh
-							ultricies
-							vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-							cursus magna.</p>
-
-					</div><!-- /.col-lg-4 -->
+		<div class="container ">
 
 
-				</div><!-- /.row -->
+			<div class="row">
+
+				<div class="col-lg-4">
+
+					<div class="customerAva">
+						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
+					</div>
+
+					<h2>Heading</h2>
+					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh
+						ultricies
+						vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
+						cursus magna.</p>
+
+				</div><!-- /.col-lg-4 -->
+
+				<div class="col-lg-4">
+
+					<div class="customerAva">
+						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
+					</div>
+
+					<h2>Heading</h2>
+					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh
+						ultricies
+						vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
+						cursus magna.</p>
+
+				</div><!-- /.col-lg-4 -->
+
+				<div class="col-lg-4">
+
+					<div class="customerAva">
+						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
+					</div>
+
+					<h2>Heading</h2>
+					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh
+						ultricies
+						vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
+						cursus magna.</p>
+
+				</div><!-- /.col-lg-4 -->
+
+
+			</div><!-- /.row -->
 
 
 
 
-
-			</div>
 
 		</div>
 
-		<footer class="py-5 footerColor">
-			<div class="container" id="footer">
-				<div class="row footerRow">
+	</div>
 
-					<div class="col-2 col-xs">
 
-						<a class="footerItem" href="#">
-							About
-						</a>
 
-					</div>
 
-					<div class="col-2 col-xs">
+	<footer class="py-5 footerColor">
+		<div class="container" id="footer">
+			<div class="row footerRow">
 
-						<a class="footerItem" href="#">
-							About
-						</a>
+				<div class="col-2 col-xs">
 
-					</div>
-
-					<div class="col-2 col-xs">
-						<a class="footerItem" href="#"> About
-						</a>
-					</div>
-
-					<div class="col-3 col-xs">
-						<a class="footerItem" href="#">
-							+7 999 999 99 99
-						</a>
-					</div>
+					<a class="footerItem" href="#">
+						About
+					</a>
 
 				</div>
-			</div>
-		</footer>
 
-		<script src="/js/main.js"></script>
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-			crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-			crossorigin="anonymous"></script>
+				<div class="col-2 col-xs">
+
+					<a class="footerItem" href="#">
+						About
+					</a>
+
+				</div>
+
+				<div class="col-2 col-xs">
+					<a class="footerItem" href="#"> About
+					</a>
+				</div>
+
+				<div class="col-3 col-xs">
+					<a class="footerItem" href="#">
+						+7 999 999 99 99
+					</a>
+				</div>
+
+			</div>
+		</div>
+	</footer>
+
+	<script src="/js/main.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
