yастройка меню для адоптива

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				<div class="col-2 col-xs">
 
 					<a class="footerItem" href="#">
-						<img src="" alt="Inst">
+						<img class="item" src="/img/soc/001-instagram.svg" alt="Inst">
 					</a>
 
 				</div>
@@ -235,13 +235,15 @@
 				<div class="col-2 col-xs">
 
 					<a class="footerItem" href="#">
-						<img src="" alt="VK">
+						<img class="item" src="/img/soc/002-vk-social-logotype.svg" alt="VK">
 					</a>
 
 				</div>
 
 				<div class="col-2 col-xs">
-					<img src="" alt="FB">
+					<a class="footerItem" href="#">
+						<img class="item" src="/img/soc/003-whatsapp.svg" alt="WB">
+					</a>
 				</div>
 
 				<div class="col-3 col-xs">
